# betty

./: CMakeLists.txt  CMakePresets.json  PRD.md  TASKS.md  review_comments.md
.pi/prompts/: review.md
plans/: TASK-1.md  TASK-10.md  TASK-11.md  TASK-13.md  TASK-14.md  TASK-2.md  TASK-5-TESTS.md
plans/1-mvp/: KEYBOARD-LAYOUT.md  TASK-12.md  TASK-15.md  TASK-16-padding.md  TASK-3.md  TASK-4.md  TASK-5.md  TASK-6.md  TASK-7.md  TASK-8.md  TASK-9.md  TASKS.md
plans/2-config/: config-prd.md  config-tasks.md  task-1.md  task-c10.md  task-c2.md  task-c3.md  task-c4.md  task-c5.md  task-c6.md  task-c7.md  task-c8.md  task-c9.md
plans/3-box-drawing/: PRD.md  TASKS.md  task-1-revert-stretch-hack.md  task-2-box-drawing-data.md  task-3-render-integration.md  task-4-bold-handling.md  task-5-tests.md  task-6-visual-validation.md
src/: CMakeLists.txt  app.cpp  app.hpp  application.cpp  application.hpp  main.cpp
src/config/: CMakeLists.txt  config.cpp  config.hpp  config_watcher.cpp  config_watcher.hpp
src/platform/: CMakeLists.txt  box_drawing.cpp  box_drawing.hpp  debug_print.hpp  error.cpp  error.hpp  gfx.cpp  gfx.hpp  gfx_impl.hpp  renderer_context.cpp  renderer_context.hpp  shell.cpp  shell.hpp  text.cpp  text.hpp  types.hpp  unicode.cpp  unicode.hpp  win32_handle.hpp  window.cpp  window.hpp
src/terminal/: CMakeLists.txt  cursor_state.cpp  cursor_state.hpp  grid.cpp  grid.hpp  input_handler.cpp  input_handler.hpp  scrollback_buffer.cpp  scrollback_buffer.hpp  session.cpp  session.hpp  sgr_state.hpp  text_buffer.cpp  text_buffer.hpp  types.hpp  vt_parser.cpp  vt_parser.hpp  wcwidth.cpp  wcwidth.hpp
src/util/: log.cpp  log.hpp  utf8.hpp
tests/: CMakeLists.txt  box_drawing_tests.cpp  config_test.cpp  cursor_state_test.cpp  grid_test.cpp  input_handler_test.cpp  scrollback_buffer_test.cpp  sgr_state_test.cpp  shell_test.cpp  utf8_test.cpp  vt_parser_test.cpp
